# Compute-Engine-Library

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  bitbucket-pipelines.yml
.circleci/: config.yml
.github/workflows/: clippy.yml  gitlab_mirror.yml  library.yml
.teamcity/: settings.kts
.teamcity/OpenSourceProjects_RustMultiplatform_ComputeEngineLibrary/: project-config.xml
.teamcity/OpenSourceProjects_RustMultiplatform_ComputeEngineLibrary/buildTypes/: OpenSourceProjects_RustMultiplatform_ComputeEngineLibrary_Build.xml  OpenSourceProjects_RustMultiplatform_ComputeEngineLibrary_Test.xml
src/: lib.rs
