[package]
name = "compute_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Compute-Engine-Library"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base_engine = { path = "./Base-Engine-Library" }
vulkano = "0.31.0"
log = "0.4"
